<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2026 GnuCash Android contributors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/title_quick_transaction"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_preset_buttons"
        style="@style/TextAppearance.EditTransaction_LabelSmall" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/preset_buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" />
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_from_account"
        style="@style/TextAppearance.EditTransaction_LabelSmall" />

    <Spinner
        android:id="@+id/input_from_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight" />

    <LinearLayout
        android:id="@+id/layout_to_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/label_to_account"
            style="@style/TextAppearance.EditTransaction_LabelSmall" />

        <Spinner
            android:id="@+id/input_to_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <EditText
            android:id="@+id/input_preset_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/label_transaction_amount"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <org.gnucash.android.ui.util.widget.TransactionTypeSwitch
            android:id="@+id/input_preset_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:checked="true"
            android:textOff="@string/label_credit"
            android:textOn="@string/label_debit" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_extra_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="12dp"
        android:text="@string/label_extra_settings_collapsed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/theme_accent" />

    <LinearLayout
        android:id="@+id/layout_extra_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/input_preset_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_preset_button_label"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <EditText
            android:id="@+id/input_preset_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_transaction_name"
            android:inputType="textCapSentences"
            android:singleLine="true" />

        <EditText
            android:id="@+id/input_preset_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_transaction_description"
            android:inputType="textCapSentences|textMultiLine" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_preset"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_as_preset"
        android:textColor="@color/theme_accent" />

    <include layout="@layout/default_buttons" />
</LinearLayout>
